--- a/src/components/404Body.module.css
+++ b/src/components/404Body.module.css
@@ -13,8 +13,15 @@
 }
 
 .content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -39,6 +46,8 @@
     outline: 2px solid var(--border2);
     outline-offset: 0.1rem;
     background-color: var(--button1);
+    -webkit-transition: outline 0.2s, scale 0.1s linear;
+    -o-transition: outline 0.2s, scale 0.1s linear;
     transition: outline 0.2s, scale 0.1s linear;
 }
 
