--- a/src/components/Alert.module.css
+++ b/src/components/Alert.module.css
@@ -3,13 +3,18 @@
     padding: 1.5rem;
     border-radius: 0.8rem;
     background: var(--surface1);
+    -webkit-box-shadow: inset 0 1px 1px var(--shadow1), 0 2px 3px var(--shadow2);
     box-shadow: inset 0 1px 1px var(--shadow1), 0 2px 3px var(--shadow2);
 }
 
 .alert h1 {
     font-size: 1.5rem;
     color: var(--text1);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 0.5rem;
     margin: 0;
@@ -27,12 +32,16 @@
 
 .alert button {
     font-size: 1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     border: none;
     background: var(--button1);
     padding: 0.4rem 2rem;
     margin-left: auto;
     border-radius: 0.5rem;
+    -webkit-transition: scale 0.3s ease;
+    -o-transition: scale 0.3s ease;
     transition: scale 0.3s ease;
 }
 
