--- a/src/components/AppsBody.module.css
+++ b/src/components/AppsBody.module.css
@@ -14,13 +14,18 @@
     padding: 2rem;
     border-radius: 0.5rem;
     background-color: var(--white2);
+    -webkit-box-shadow: inset 0 1px 1px var(--shadow2), 0 2px 3px var(--shadow2);
     box-shadow: inset 0 1px 1px var(--shadow2), 0 2px 3px var(--shadow2);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     margin-top: 2rem;
-    margin-bottom: 400px;
-    animation: fadeAndMove 0.6s ease;
+    margin-bottom: 200px;
 }
 
 .container abbr {
@@ -30,12 +35,18 @@
 .app_content {
     color: var(--text2);
     width: 440px;
+    -webkit-: fadeAndMove 0.6s ease;
+    animation: fadeAndMove 0.6s ease;
 }
 
 .app_heading {
     padding-bottom: 1rem;
     border-bottom: solid 1px var(--border2);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 0.8rem;
 }
@@ -57,8 +68,13 @@
     list-style: none;
     padding-left: 0;
     margin: 1.8rem 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
 }
 
@@ -70,7 +86,12 @@
     border: solid 1px var(--border2);
     border-radius: 0.5rem;
     padding: 1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     gap: 0.8rem;
 }
@@ -83,6 +104,8 @@
 .app_download section form {
     height: 28px;
     margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     position: relative;
 }
@@ -94,6 +117,8 @@
     border: solid 1px var(--text1);
     border-radius: 0.4rem 0 0 0.4rem;
     outline: none;
+    -webkit-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
     transition: all 0.2s ease;
 }
 
@@ -111,6 +136,8 @@
     border: none;
     border-radius: 0 0.4rem 0.4rem 0;
     cursor: pointer;
+    -webkit-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
     transition: all 0.2s ease;
 }
 
@@ -125,17 +152,31 @@
     background-color: var(--error2) !important;
 }
 
-@keyframes fadeAndMove {
+@-webkit-keyframes fadeAndMove {
     from {
         opacity: 0;
-        translate: 0 200px;
-        transform: skew(15deg, 25deg);
+        translate: -100px;
+        scale: 1.2;
     }
 
     to {
         opacity: 1;
         translate: 0;
-        transform: skew(0);
+        scale: 1;
+    }
+}
+
+@keyframes fadeAndMove {
+    from {
+        opacity: 0;
+        translate: -100px;
+        scale: 1.2;
+    }
+
+    to {
+        opacity: 1;
+        translate: 0;
+        scale: 1;
     }
 }
 
