--- a/src/components/HomeBody.module.css
+++ b/src/components/HomeBody.module.css
@@ -1,5 +1,12 @@
 .body_overlay {
     background-color: var(--surface1);
+    background-image: -webkit-gradient(linear,
+            left top, left bottom,
+            color-stop(34vw, var(--surface4)),
+            color-stop(34vw, var(--surface1)));
+    background-image: -o-linear-gradient(top,
+            var(--surface4) 34vw,
+            var(--surface1) 34vw);
     background-image: linear-gradient(180deg,
             var(--surface4) 34vw,
             var(--surface1) 34vw);
@@ -11,7 +18,7 @@
     padding: 2%;
     max-width: 1280px;
     margin: 0 auto 0 auto;
-    background-image: url(../assets/web_illustration-1280x560.png);
+    background-image: url(../assets/home_page_illustration_1280x560.svg);
     background-size: contain;
     background-position: top right;
     background-attachment: fixed;
@@ -21,26 +28,46 @@
 .container_apps {
     width: 600px;
     height: calc(200px + 30vh);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: flex-start;
+    -webkit-animation: fadeAndMove 0.6s ease;
     animation: fadeAndMove 0.6s ease;
 }
 
 .container_apps h2 {
     font-size: 2.5rem;
-    color: var(--text2);
+    color: var(--text3);
     margin: 0 0 1.2rem 0;
 }
 
 .container_contact {
     width: 500px;
     height: calc(50px + 20vh);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: flex-start;
+    -webkit-animation: fadeAndMove 0.6s ease;
     animation: fadeAndMove 0.6s ease;
 }
 
@@ -64,10 +91,20 @@
 
 .container_connect {
     height: calc(50px + 20vh);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-animation: fadeAndMove 0.6s ease;
     animation: fadeAndMove 0.6s ease;
 }
 
@@ -79,6 +116,8 @@
 }
 
 .container_connect section {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 2rem;
 }
@@ -87,11 +126,15 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 1rem;
 }
 
 .container_connect form {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: 28px;
     position: relative;
@@ -104,6 +147,8 @@
     border: solid 1px var(--button1);
     border-radius: 0.4rem 0 0 0.4rem;
     outline: none;
+    -webkit-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
     transition: all 0.2s ease;
 }
 
@@ -112,6 +157,8 @@
     border: none;
     border-radius: 0 0.4rem 0.4rem 0;
     cursor: pointer;
+    -webkit-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
 
@@ -124,6 +171,20 @@
 
 .error_input {
     background-color: var(--error2) !important;
+}
+
+@-webkit-keyframes fadeAndMove {
+    from {
+        opacity: 0;
+        translate: -100px;
+        scale: 1.2;
+    }
+
+    to {
+        opacity: 1;
+        translate: 0;
+        scale: 1;
+    }
 }
 
 @keyframes fadeAndMove {
@@ -142,6 +203,9 @@
 
 @media screen and (min-width: 1280px) {
     .body_overlay {
+        background-image: -o-linear-gradient(top,
+                var(--surface4) 438px,
+                var(--surface1) 438px);
         background-image: linear-gradient(180deg,
                 var(--surface4) 438px,
                 var(--surface1) 438px);
@@ -155,13 +219,20 @@
 
 @media screen and (max-width: 840px) {
     .body_overlay {
+        background-image: -webkit-gradient(linear,
+                left top, left bottom,
+                color-stop(50vw, var(--surface4)),
+                color-stop(50vw, var(--surface1)));
+        background-image: -o-linear-gradient(top,
+                var(--surface4) 50vw,
+                var(--surface1) 50vw);
         background-image: linear-gradient(180deg,
                 var(--surface4) 50vw,
                 var(--surface1) 50vw);
     }
 
     .body {
-        background-image: url(../assets/web_illustration-840x480.png);
+        background-image: url(../assets/home_page_illustration_840x480.svg);
     }
 
     .container_apps {
@@ -179,6 +250,9 @@
     }
 
     .container_connect section {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
         gap: 1.5rem;
     }
