--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -5,18 +5,43 @@
     width: 96vw;
     padding: 0 2vw;
     background: var(--surface4);
+    background: -webkit-gradient(linear,
+            left top, left bottom,
+            color-stop(60%, var(--surface4)),
+            to(var(--primary_lighten_p8_opacity)));
+    background: -o-linear-gradient(top,
+            var(--surface4) 60%,
+            var(--primary_lighten_p8_opacity) 100%);
     background: linear-gradient(180deg,
             var(--surface4) 60%,
             var(--primary_lighten_p8_opacity) 100%);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 }
 
 .white_bg {
+    background: -webkit-gradient(linear,
+            left top, left bottom,
+            color-stop(60%, var(--white1)),
+            to(var(--white1_p8_opacity)));
+    background: -o-linear-gradient(top,
+            var(--white1) 60%,
+            var(--white1_p8_opacity) 100%);
     background: linear-gradient(180deg,
             var(--white1) 60%,
             var(--white1_p8_opacity) 100%);
@@ -54,17 +79,29 @@
 
 .menu span:nth-of-type(1) {
     margin-bottom: 0.3rem;
+    -webkit-transition: translate 200ms cubic-bezier(0.77, 0.2, 0.05, 1.0),
+        rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms;
+    -o-transition: translate 200ms cubic-bezier(0.77, 0.2, 0.05, 1.0),
+        rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms;
     transition: translate 200ms cubic-bezier(0.77, 0.2, 0.05, 1.0),
         rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms;
 }
 
 .menu span:nth-of-type(2) {
     margin-bottom: 0.3rem;
+    -webkit-transition: width 300ms linear,
+        opacity 500ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    -o-transition: width 300ms linear,
+        opacity 500ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
     transition: width 300ms linear,
         opacity 500ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
 }
 
 .menu span:nth-of-type(3) {
+    -webkit-transition: translate 150ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms,
+        rotate 300ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 200ms;
+    -o-transition: translate 150ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms,
+        rotate 300ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 200ms;
     transition: translate 150ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms,
         rotate 300ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 200ms;
 }
@@ -77,9 +114,14 @@
     left: 0;
     width: 100vw;
     height: 100vh;
+    background: -o-linear-gradient(330deg,
+            var(--surface4) 20rem,
+            var(--white1_p8_opacity) 40rem);
     background: linear-gradient(120deg,
             var(--surface4) 20rem,
             var(--white1_p8_opacity) 40rem);
+    -webkit-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
     transition: all 0.2s linear;
 }
 
@@ -88,9 +130,16 @@
     margin: 0;
     padding: 5rem 5rem 5rem 2vw;
     list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     gap: 1rem;
+    -webkit-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
     transition: all 0.2s linear;
 }
 
@@ -101,9 +150,17 @@
     padding: 0.4rem 0.8rem;
     border: 1px solid var(--text1);
     border-radius: 0.4rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
     transition: all 0.2s linear;
 }
 
@@ -116,44 +173,70 @@
 }
 
 .menu li:nth-of-type(1) {
+    -webkit-transform: translate(-400px, 0);
+    -ms-transform: translate(-400px, 0);
     transform: translate(-400px, 0);
+    -webkit-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
 
 .menu li:nth-of-type(2) {
+    -webkit-transform: translate(-400px, 0);
+    -ms-transform: translate(-400px, 0);
     transform: translate(-400px, 0);
+    -webkit-transition: all 0.7s ease 0.05s;
+    -o-transition: all 0.7s ease 0.05s;
     transition: all 0.7s ease 0.05s;
 }
 
 .menu li:nth-of-type(3) {
+    -webkit-transform: translate(-400px, 0);
+    -ms-transform: translate(-400px, 0);
     transform: translate(-400px, 0);
+    -webkit-transition: all 0.8s ease 0.1s;
+    -o-transition: all 0.8s ease 0.1s;
     transition: all 0.8s ease 0.1s;
 }
 
 .menu li:nth-of-type(4) {
+    -webkit-transform: translate(-400px, 0);
+    -ms-transform: translate(-400px, 0);
     transform: translate(-400px, 0);
+    -webkit-transition: all 0.9s ease 0.15s;
+    -o-transition: all 0.9s ease 0.15s;
     transition: all 0.9s ease 0.15s;
 }
 
 .menu input:checked~nav {
     opacity: 1;
     pointer-events: all;
+    -webkit-transform: translate(0);
+    -ms-transform: translate(0);
     transform: translate(0);
 }
 
 .menu input:checked~nav li:nth-of-type(1) {
+    -webkit-transform: translate(0);
+    -ms-transform: translate(0);
     transform: translate(0);
 }
 
 .menu input:checked~nav li:nth-of-type(2) {
+    -webkit-transform: translate(0);
+    -ms-transform: translate(0);
     transform: translate(0);
 }
 
 .menu input:checked~nav li:nth-of-type(3) {
+    -webkit-transform: translate(0);
+    -ms-transform: translate(0);
     transform: translate(0);
 }
 
 .menu input:checked~nav li:nth-of-type(4) {
+    -webkit-transform: translate(0);
+    -ms-transform: translate(0);
     transform: translate(0);
 }
 
