--- a/src/components/PhoneDrawing.module.css
+++ b/src/components/PhoneDrawing.module.css
@@ -47,6 +47,8 @@
     position: absolute;
     top: 7px;
     right: 4px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 4px;
 }
@@ -74,7 +76,11 @@
     bottom: 8px;
     left: 0;
     width: 102%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
     justify-content: space-evenly;
 }
 
