--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,9 +1,14 @@
 .footer {
-    font-size: small;
+    font-size: smaller;
     color: var(--text3);
     padding: 1vw;
     background-color: var(--surface1);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
     gap: 0.8rem;
 }
@@ -11,7 +16,12 @@
 .footer ul {
     padding: 0;
     list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
     gap: 0.8rem;
 }
