--- a/src/index.css
+++ b/src/index.css
@@ -6,26 +6,23 @@ body {
 }
 
 body::-webkit-scrollbar {
-  width: 8px;
+  width: 0.5rem;
+  height: 0.5rem;
 }
 
 body::-webkit-scrollbar {
-  background-color: #e3e8e3;
+  background-color: var(--white240);
 }
 
 body::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: #c2d6c4;
-  -webkit-box-shadow: inset 1px 0.5px 3px #9cc99f;
-  box-shadow: inset 1px 0.5px 3px #9cc99f;
-}
-
-body::-webkit-scrollbar-thumb:hover {
-  background-color: #a3c2a6;
+  border-radius: 0.2rem;
+  background-color: var(--primary_light);
+  -webkit-box-shadow: inset 0.1rem 0.05rem 0.2rem var(--grey200);
+  box-shadow: inset 0.1rem 0.05rem 0.2rem var(--grey200);
 }
 
 body::-webkit-scrollbar-thumb:active {
-  background-color: #7ab880;
+  background-color: var(--primary);
 }
 
 :root {
@@ -46,59 +43,56 @@ body::-webkit-scrollbar-thumb:active {
 }
 
 :root {
-  --white1: #fafafa;
-  --white2: #f5f5f5;
-  --white3: #f0f0f0;
+  --white250: #fafafa;
+  --white245: #f5f5f5;
+  --white240: #f0f0f0;
 
-  --black1: #0a0a0a;
-  --black2: #141414;
-  --black3: #1e1e1e;
+  --black20: #141414;
+  --black40: #282828;
+  --black60: #3c3c3c;
 
-  --grey1: #3c3c3c;
-  --grey2: #646464;
-  --grey3: #8c8c8c;
-  --grey4: #b4b4b4;
-  --grey5: #dcdcdc;
+  --grey120: #787878;
+  --grey160: #a0a0a0;
+  --grey200: #c8c8c8;
 
   --red1: #af0000;
   --red2: #d77878;
 
-  --primary: #78ba7e;
-  --primary_lighten: #c9e3cb;
-  --primary_lighten2: #e4f1e5;
-  --primary_darken: #2a512d;
-  --primary_saturated_darken: #639c68;
+  --primary: #71995f;
+  --primary_dark: #497137;
+  --primary_light: #c1e9af;
 
-  --secondary: #ba78b4;
-  --secondary_lighten: #e3c9e1;
-  --secondary_darken: #512a4e;
+  --secondary: #6c3c2c;
+  --secondary_light: #ecbcac;
+  --secondary_dark: #4c1c0c;
 
-  --white1_p8_opacity: rgba(250, 250, 250, 0.8);
-  --grey5_p5_opacity: rgba(220, 220, 220, 0.5);
-  --primary_lighten_p8_opacity: rgba(201, 227, 203, 0.8);
+  --white250_p8_opacity: rgba(250, 250, 250, 0.8);
+  --grey200_p5_opacity: rgba(200, 200, 200, 0.5);
+  --primary_light_p8_opacity: rgba(193, 233, 175, 0.8);
 }
 
 :root {
-  --text1: var(--black1);
-  --text2: var(--black2);
-  --text3: var(--black3);
+  --text1: var(--black20);
+  --text2: var(--black40);
+  --text3: var(--black60);
+  --text4: var(--white250);
 
-  --surface1: var(--white1);
-  --surface2: var(--white2);
-  --surface3: var(--white3);
-  --surface4: var(--primary_lighten);
-  --surface5: var(--primary_lighten2);
+  --surface1: var(--white250);
+  --surface2: var(--white245);
+  --surface3: var(--white240);
+  --surface4: var(--primary_light);
 
-  --shadow1: var(--white3);
-  --shadow2: var(--grey5);
-  --shadow3: var(--grey4);
+  --shadow1: var(--white240);
+  --shadow2: var(--grey200);
+  --shadow3: var(--grey120);
 
-  --border1: var(--grey3);
-  --border2: var(--grey4);
+  --border1: var(--grey120);
+  --border2: var(--grey160);
+  --border3: var(--grey200);
 
   --button1: var(--primary);
-  --button2: var(--primary_lighten);
-  --button3: var(--primary_saturated_darken);
+  --button2: var(--primary_dark);
+  --button3: var(--primary_light);
 
   --link: var(--primary);
 
