--- a/src/components/AppsBody.module.css
+++ b/src/components/AppsBody.module.css
@@ -9,200 +9,32 @@
     margin: 0 auto 0 auto;
 }
 
-.container {
-    width: 800px;
-    padding: 2rem;
-    border-radius: 0.5rem;
-    background-color: var(--white2);
-    -webkit-box-shadow: inset 0 1px 1px var(--shadow2), 0 2px 3px var(--shadow2);
-    box-shadow: inset 0 1px 1px var(--shadow2), 0 2px 3px var(--shadow2);
-    display: -webkit-box;
-    display: -ms-flexbox;
+.body header {
+    height: 15rem;
+    border-radius: 1rem;
+    background: url(../assets/apps_illustration.svg), var(--surface4);
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-size: contain;
     display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin-top: 2rem;
-    margin-bottom: 200px;
-}
-
-.container abbr {
-    text-decoration: none;
-}
-
-.app_content {
-    color: var(--text2);
-    width: 440px;
-    -webkit-: fadeAndMove 0.6s ease;
-    animation: fadeAndMove 0.6s ease;
-}
-
-.app_heading {
-    padding-bottom: 1rem;
-    border-bottom: solid 1px var(--border2);
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    gap: 0.8rem;
 }
 
-.app_heading img {
-    width: 4rem;
-}
-
-.app_heading h1 {
-    margin: 0;
-}
-
-.app_heading p {
-    margin: 0;
-    letter-spacing: 0.04rem;
-}
-
-.app_download ul {
-    list-style: none;
-    padding-left: 0;
-    margin: 1.8rem 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-}
-
-.app_download ul img {
-    height: 2.5rem;
-}
-
-.app_download section {
-    border: solid 1px var(--border2);
-    border-radius: 0.5rem;
+.body header h1 {
+    text-transform: uppercase;
+    margin-left: 2rem;
     padding: 1rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    gap: 0.8rem;
+    border-radius: 50%;
+    background-color: var(--primary_light_p8_opacity);
 }
 
-.app_download section p {
-    font-size: 0.92rem;
-    margin: 0;
+.apps {
+    margin: 4rem 0;
 }
 
-.app_download section form {
-    height: 28px;
-    margin: 0 auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    position: relative;
-}
-
-.app_download section input[type='email'] {
-    letter-spacing: 0.04rem;
-    padding: 0.1rem 0.5rem;
-    background-color: #fff;
-    border: solid 1px var(--text1);
-    border-radius: 0.4rem 0 0 0.4rem;
-    outline: none;
-    -webkit-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-}
-
-.app_download section input[type='email']:focus {
-    scale: 1.2;
-}
-
-.app_download section input[type='email']:focus~input[type='submit'] {
-    scale: 1.2;
-}
-
-.app_download section input[type='submit'] {
-    color: #fff;
-    background-color: var(--text1);
-    border: none;
-    border-radius: 0 0.4rem 0.4rem 0;
-    cursor: pointer;
-    -webkit-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-}
-
-.app_download section form span {
-    color: var(--error1);
-    position: absolute;
-    top: 28px;
-    left: 8px;
-}
-
-.error_input {
-    background-color: var(--error2) !important;
-}
-
-@-webkit-keyframes fadeAndMove {
-    from {
-        opacity: 0;
-        translate: -100px;
-        scale: 1.2;
-    }
-
-    to {
-        opacity: 1;
-        translate: 0;
-        scale: 1;
-    }
-}
-
-@keyframes fadeAndMove {
-    from {
-        opacity: 0;
-        translate: -100px;
-        scale: 1.2;
-    }
-
-    to {
-        opacity: 1;
-        translate: 0;
-        scale: 1;
-    }
-}
-
-@media screen and (max-width: 920px) {
-    .container {
-        width: 440px;
-        margin-left: auto;
-        margin-right: auto;
-        gap: 2rem;
-    }
-
-    .app_photos {
-        margin: auto;
-    }
-
-    .app_content {
-        width: auto;
-    }
-}
-
-@media screen and (max-width: 520px) {
-    .container {
-        width: auto;
-    }
-
-    .app_download ul {
-        gap: 4px;
+@media screen and (max-width: 480px) {
+    .apps {
+        display: flex;
+        justify-content: center;
     }
 }
