--- a/src/components/PhoneDrawing.module.css
+++ b/src/components/PhoneDrawing.module.css
@@ -1,79 +1,79 @@
 .phone {
     position: relative;
-    height: 480px;
-    width: 240px;
-    border: 1px solid var(--grey2);
-    border-radius: 16px;
-    background-color: var(--black3);
+    height: 25rem;
+    width: 12.5rem;
+    border: 1px solid #787878;
+    border-radius: 0.8rem;
+    background-color: #141414;
 }
 
 .screen {
     position: absolute;
-    inset: 4px 2px 8px;
-    border: 1px solid var(--grey2);
-    border-radius: 16px;
-    background-color: var(--white1);
+    inset: 0.2rem 0.1rem 0.4rem;
+    border: 1px solid #787878;
+    border-radius: 0.8rem;
+    background-color: #ffffff;
 }
 
 .content {
     position: absolute;
-    inset: calc((100% - 96px) / 2) calc((100% - 96px) / 2);
+    inset: calc((100% - 5rem) / 2) calc((100% - 5rem) / 2);
 }
 
 .content img {
-    width: 96px;
+    width: 5rem;
 }
 
 .time {
     position: absolute;
-    top: 4px;
-    left: 4px;
-    font-size: 12px;
+    top: 0.2rem;
+    left: 0.2rem;
+    font-size: 0.6rem;
     font-weight: 500;
-    color: var(--grey2);
+    color: #141414;
 }
 
 .camera {
     position: absolute;
-    top: 4px;
-    left: 112px;
-    width: 12px;
-    height: 12px;
+    top: 0.2rem;
+    left: calc((100% / 2) - 0.3rem);
+    width: 0.6rem;
+    height: 0.6rem;
     border-radius: 50%;
-    background-color: var(--black3);
+    background-color: #141414;
 }
 
 .network_bar {
     position: absolute;
-    top: 7px;
-    right: 4px;
+    top: 0.2rem;
+    right: 0.3rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    gap: 4px;
+    gap: 0.2rem;
 }
 
 .network_bar span:nth-of-type(1) {
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-top: 10px solid var(--grey2);
-    border-radius: 5px;
+    border-left: 0.3rem solid transparent;
+    border-right: 0.3rem solid transparent;
+    border-top: 0.5rem solid #787878;
+    border-radius: 0.25rem;
 }
 
 .network_bar span:nth-of-type(2) {
-    border-left: 10px solid transparent;
-    border-bottom: 10px solid var(--grey2);
+    border-left: 0.5rem solid transparent;
+    border-bottom: 0.5rem solid #787878;
 }
 
 .network_bar span:nth-of-type(3) {
-    width: 6px;
-    height: 10px;
-    background-color: var(--grey2);
+    width: 0.3rem;
+    height: 0.5rem;
+    background-color: #787878;
 }
 
 .system_nav_bar {
     position: absolute;
-    bottom: 8px;
+    bottom: 0.4rem;
     left: 0;
     width: 102%;
     display: -webkit-box;
@@ -85,20 +85,20 @@
 }
 
 .system_nav_bar span:nth-of-type(1) {
-    width: 10px;
-    height: 10px;
-    background-color: var(--grey3);
+    width: 0.5rem;
+    height: 0.5rem;
+    background-color: #787878;
 }
 
 .system_nav_bar span:nth-of-type(2) {
-    width: 10px;
-    height: 10px;
+    width: 0.5rem;
+    height: 0.5rem;
     border-radius: 50%;
-    background-color: var(--grey3);
+    background-color: #787878;
 }
 
 .system_nav_bar span:nth-of-type(3) {
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-    border-right: 10px solid var(--grey3);
+    border-top: 0.25rem solid transparent;
+    border-bottom: 0.25rem solid transparent;
+    border-right: 0.5rem solid #787878;
 }
