--- a/src/elements/Modal.module.css
+++ b/src/elements/Modal.module.css
@@ -8,17 +8,14 @@
     background-color: var(--grey200_p5_opacity);
     opacity: 0;
     visibility: hidden;
-    -webkit-transition: visibility 0s linear 0.2s, opacity 0.2s ease;
-    -o-transition: visibility 0s linear 0.2s, opacity 0.2s ease;
-    transition: visibility 0s linear 0.2s, opacity 0.2s ease
+    -webkit-transition: visibility 0s linear 0.1s, opacity 0.3s ease;
+    -o-transition: visibility 0s linear 0.1s, opacity 0.3s ease;
+    transition: visibility 0s linear 0.1s, opacity 0.3s ease;
 }
 
 .modal_open {
     opacity: 1;
     visibility: visible;
-    -webkit-transition: visibility 0s linear, opacity 0.3s ease;
-    -o-transition: visibility 0s linear, opacity 0.3s ease;
-    transition: visibility 0s linear, opacity 0.3s ease;
 }
 
 .modal {
