--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,27 +1,17 @@
 .navbar {
     position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
     z-index: 1;
-    width: 96vw;
-    padding: 0 2vw;
-    background: var(--surface4);
-    background: -webkit-gradient(linear,
-            left top, left bottom,
-            color-stop(60%, var(--surface4)),
-            to(var(--primary_light_p8_opacity)));
-    background: -o-linear-gradient(top,
-            var(--surface4) 60%,
-            var(--primary_light_p8_opacity) 100%);
-    background: linear-gradient(180deg,
-            var(--surface4) 60%,
-            var(--primary_light_p8_opacity) 100%);
+    height: 4rem;
+    padding: 0 2rem;
+    background: -webkit-gradient(linear, left top, left bottom, from(var(--background_color1)), to(transparent));
+    background: -o-linear-gradient(top, var(--background_color1), transparent);
+    background: linear-gradient(180deg, var(--background_color1), transparent);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
@@ -34,79 +24,79 @@
     user-select: none;
 }
 
-.white_bg {
-    background: -webkit-gradient(linear,
-            left top, left bottom,
-            color-stop(60%, var(--white250)),
-            to(var(--white250_p8_opacity)));
-    background: -o-linear-gradient(top,
-            var(--white250) 60%,
-            var(--white1_p8_opacity) 100%);
-    background: linear-gradient(180deg,
-            var(--white250) 60%,
-            var(--white250_p8_opacity) 100%);
+.logo {
+    margin-right: calc(50% - (5rem / 2));
 }
 
-.logo {
-    margin-right: calc(50% - 3.5rem);
-    z-index: 1;
+.logo a {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
 }
 
 .logo img {
-    width: 7rem;
-    height: 4.2rem;
+    width: 5rem;
+    height: 3rem;
 }
 
-.menu input {
-    width: 2rem;
-    height: 2rem;
-    margin-top: -0.4rem;
-    position: absolute;
-    z-index: 2;
+.menu_toggle_button {
     cursor: pointer;
-    opacity: 0;
-}
-
-.menu span {
-    display: block;
-    width: 2.4rem;
-    height: 0.2rem;
-    border-radius: 0.3rem;
-    background-color: var(--text1);
-    position: relative;
     z-index: 1;
 }
 
-.menu span:nth-of-type(1) {
-    margin-bottom: 0.3rem;
-    -webkit-transition: translate 200ms cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms;
-    -o-transition: translate 200ms cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms;
-    transition: translate 200ms cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms;
+.menu_toggle_button span {
+    display: block;
+    width: 2rem;
+    height: 0.1rem;
+    border-radius: 0.1rem;
+    background-color: var(--foreground_color2);
 }
 
-.menu span:nth-of-type(2) {
-    margin-bottom: 0.3rem;
+.menu_toggle_button span:nth-of-type(1) {
+    margin-bottom: 0.25rem;
+    -webkit-transition: rotate 350ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    -o-transition: rotate 350ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    transition: rotate 350ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+
+}
+
+.menu_toggle_button span:nth-of-type(2) {
+    margin-bottom: 0.25rem;
     -webkit-transition: width 300ms linear,
-        opacity 500ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+        opacity 400ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
     -o-transition: width 300ms linear,
-        opacity 500ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+        opacity 400ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
     transition: width 300ms linear,
-        opacity 500ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+        opacity 400ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
 }
 
-.menu span:nth-of-type(3) {
-    -webkit-transition: translate 150ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms,
-        rotate 300ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 200ms;
-    -o-transition: translate 150ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms,
-        rotate 300ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 200ms;
-    transition: translate 150ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms,
-        rotate 300ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 200ms;
+.menu_toggle_button span:nth-of-type(3) {
+    -webkit-transition: rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    -o-transition: rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    transition: rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
 }
 
-.menu nav {
+.menu_toggle_button_cross span:nth-of-type(1) {
+    -webkit-transform-origin: left;
+    -ms-transform-origin: left;
+    transform-origin: left;
+    rotate: 21deg;
+}
+
+.menu_toggle_button_cross span:nth-of-type(2) {
+    width: 0;
+    opacity: 0;
+}
+
+.menu_toggle_button_cross span:nth-of-type(3) {
+    -webkit-transform-origin: left;
+    -ms-transform-origin: left;
+    transform-origin: left;
+    rotate: -21deg;
+}
+
+.navigations {
+    visibility: hidden;
     opacity: 0;
     pointer-events: none;
     position: absolute;
@@ -114,21 +104,27 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: -o-linear-gradient(330deg,
-            var(--surface4) 20rem,
-            var(--white250_p8_opacity) 40rem);
-    background: linear-gradient(120deg,
-            var(--surface4) 20rem,
-            var(--white250_p8_opacity) 40rem);
-    -webkit-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;
+    background: -webkit-gradient(linear, left top, right top, color-stop(16rem, var(--background_color2)), to(transparent));
+    background: -o-linear-gradient(left, var(--background_color2) 16rem, transparent);
+    background: linear-gradient(90deg, var(--background_color2) 16rem, transparent);
+    -webkit-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    transition: all .3s linear;
 }
 
-.menu ul {
-    width: 10rem;
+.navigations_visible {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: all;
+}
+
+.navigations>ul {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    height: 100%;
+    padding: 5rem 8rem 0 2rem;
     margin: 0;
-    padding: 5rem 8rem 8rem 2vw;
     list-style: none;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -137,86 +133,108 @@
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    gap: 1rem;
-    -webkit-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;
+    gap: 1.5rem;
 }
 
-.menu li {
-    font-size: 1.25rem;
-    font-weight: 600;
-    color: var(--text1);
-    padding: 0.4rem 0.8rem;
-    border: 1px solid var(--text1);
-    border-radius: 0.4rem;
+.navigations>ul>ul {
+    padding-left: 1rem;
+    list-style: none;
+    visibility: hidden;
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.navigations>ul>li {
+    font-size: 1.5rem;
+}
+
+.navigations>ul>ul>li {
+    font-size: 1rem;
+}
+
+.navigations ul li {
+    font-family: var(--font-bruno);
+    text-transform: uppercase;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    position: relative;
+    cursor: pointer;
+    translate: -24rem 0;
+}
+
+.navigations ul li::before {
+    content: "";
+    position: absolute;
+    bottom: -0.1em;
+    width: 100%;
+    height: 0.1em;
+    background-color: var(--foreground_color2);
+    scale: 0 1;
+    -webkit-transition: scale .3s ease-out;
+    -o-transition: scale .3s ease-out;
+    transition: scale .3s ease-out;
+}
+
+.navigations ul li:hover::before {
+    -webkit-transform-origin: left;
+    -ms-transform-origin: left;
+    transform-origin: left;
+    scale: 1;
+}
+
+.navigations ul li:active::before {
+    -webkit-transform-origin: right;
+    -ms-transform-origin: right;
+    transform-origin: right;
+    scale: 0 1;
+}
+
+.navigations>ul>li:nth-of-type(2) {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;
+    -webkit-box-align: baseline;
+    -ms-flex-align: baseline;
+    align-items: baseline;
+    gap: 0.5rem;
 }
 
-.menu li:hover {
-    background-color: var(--button1);
+.navigations>ul>li:nth-of-type(2) img {
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
 }
 
-.menu li:active {
-    translate: 16px 4px;
+.navigations_apps_visible>ul>li:nth-of-type(2) img {
+    rotate: -180deg;
 }
 
-.menu li:nth-of-type(1) {
-    -webkit-transform: translate(-400px, 0);
-    -ms-transform: translate(-400px, 0);
-    transform: translate(-400px, 0);
-    -webkit-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+.navigations ul li:nth-of-type(1) {
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
 }
 
-.menu li:nth-of-type(2) {
-    -webkit-transform: translate(-400px, 0);
-    -ms-transform: translate(-400px, 0);
-    transform: translate(-400px, 0);
-    -webkit-transition: all 0.7s ease 0.05s;
-    -o-transition: all 0.7s ease 0.05s;
-    transition: all 0.7s ease 0.05s;
+.navigations ul li:nth-of-type(2) {
+    -webkit-transition: all .5s .1s;
+    -o-transition: all .5s .1s;
+    transition: all .5s .1s;
 }
 
-.menu input:checked~nav {
+.navigations_visible>ul>li {
+    translate: 0;
+}
+
+.navigations_apps_visible>ul>ul:nth-of-type(1) {
+    visibility: visible;
+    position: relative;
     opacity: 1;
     pointer-events: all;
-    -webkit-transform: translate(0);
-    -ms-transform: translate(0);
-    transform: translate(0);
 }
 
-.menu input:checked~nav li {
-    -webkit-transform: translate(0);
-    -ms-transform: translate(0);
-    transform: translate(0);
-}
 
-.menu input:checked~span:nth-of-type(1) {
-    width: 2.2rem;
-    translate: 0 0.5rem;
-    rotate: 45deg;
-}
-
-.menu input:checked~span:nth-of-type(2) {
-    width: 0;
-    opacity: 0;
-}
-
-.menu input:checked~span:nth-of-type(3) {
-    width: 2.2rem;
-    translate: 0 -0.5rem;
-    rotate: -45deg;
+.navigations_apps_visible>ul>ul:nth-of-type(1) li {
+    translate: 0;
 }
