--- a/src/components/FilledButton.module.css
+++ b/src/components/FilledButton.module.css
@@ -1,6 +1,6 @@
 .button {
     font-size: 0.8rem;
-    font-family: var(--font-bruno);
+    font-family: var(--font-goldman);
     letter-spacing: 0.1rem;
     word-spacing: 0.2rem;
     color: var(--background_color1);
