--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -3,7 +3,6 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1;
     height: 4rem;
     padding: 0 2rem;
     background: -webkit-gradient(linear, left top, left bottom, from(var(--background_color1)), to(transparent));
@@ -24,8 +23,82 @@
     user-select: none;
 }
 
-.logo {
-    margin-right: calc(50% - (5rem / 2));
+.hamburger_button,
+.navbar>ul {
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -ms-flex-preferred-size: 0;
+    flex-basis: 0;
+}
+
+.navbar>ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+}
+
+.hamburger_button {
+    cursor: pointer;
+}
+
+.hamburger_button span {
+    display: block;
+    width: 2rem;
+    height: 0.1rem;
+    border-radius: 0.1rem;
+    background-color: var(--foreground_color2);
+}
+
+.hamburger_button span:nth-of-type(1) {
+    margin-bottom: 0.25rem;
+    -webkit-transition: rotate 350ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    -o-transition: rotate 350ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    transition: rotate 350ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+
+}
+
+.hamburger_button span:nth-of-type(2) {
+    margin-bottom: 0.25rem;
+    -webkit-transition: width 300ms linear,
+        opacity 400ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    -o-transition: width 300ms linear,
+        opacity 400ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    transition: width 300ms linear,
+        opacity 400ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+}
+
+.hamburger_button span:nth-of-type(3) {
+    -webkit-transition: rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    -o-transition: rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    transition: rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
+}
+
+.cross_button {
+    position: relative;
+    z-index: 1;
+}
+
+.cross_button span:nth-of-type(1) {
+    -webkit-transform-origin: left;
+    -ms-transform-origin: left;
+    transform-origin: left;
+    rotate: 21deg;
+}
+
+.cross_button span:nth-of-type(2) {
+    width: 0;
+    opacity: 0;
+}
+
+.cross_button span:nth-of-type(3) {
+    -webkit-transform-origin: left;
+    -ms-transform-origin: left;
+    transform-origin: left;
+    rotate: -21deg;
 }
 
 .logo a {
@@ -39,202 +112,55 @@
     height: 3rem;
 }
 
-.menu_toggle_button {
-    cursor: pointer;
-    z-index: 1;
-}
-
-.menu_toggle_button span {
-    display: block;
-    width: 2rem;
-    height: 0.1rem;
-    border-radius: 0.1rem;
-    background-color: var(--foreground_color2);
-}
-
-.menu_toggle_button span:nth-of-type(1) {
-    margin-bottom: 0.25rem;
-    -webkit-transition: rotate 350ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    -o-transition: rotate 350ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    transition: rotate 350ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
-
-}
-
-.menu_toggle_button span:nth-of-type(2) {
-    margin-bottom: 0.25rem;
-    -webkit-transition: width 300ms linear,
-        opacity 400ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    -o-transition: width 300ms linear,
-        opacity 400ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    transition: width 300ms linear,
-        opacity 400ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
-}
-
-.menu_toggle_button span:nth-of-type(3) {
-    -webkit-transition: rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    -o-transition: rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    transition: rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
-}
-
-.menu_toggle_button_cross span:nth-of-type(1) {
-    -webkit-transform-origin: left;
-    -ms-transform-origin: left;
-    transform-origin: left;
-    rotate: 21deg;
-}
-
-.menu_toggle_button_cross span:nth-of-type(2) {
-    width: 0;
-    opacity: 0;
-}
-
-.menu_toggle_button_cross span:nth-of-type(3) {
-    -webkit-transform-origin: left;
-    -ms-transform-origin: left;
-    transform-origin: left;
-    rotate: -21deg;
-}
-
-.navigations {
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: -webkit-gradient(linear, left top, right top, color-stop(16rem, var(--background_color2)), to(transparent));
-    background: -o-linear-gradient(left, var(--background_color2) 16rem, transparent);
-    background: linear-gradient(90deg, var(--background_color2) 16rem, transparent);
-    -webkit-transition: all .3s linear;
-    -o-transition: all .3s linear;
-    transition: all .3s linear;
-}
-
-.navigations_visible {
-    visibility: visible;
-    opacity: 1;
-    pointer-events: all;
-}
-
-.navigations>ul {
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    height: 100%;
-    padding: 5rem 8rem 0 2rem;
+.navbar>ul {
+    list-style: none;
+    padding: 0;
     margin: 0;
-    list-style: none;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    gap: 1.5rem;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    gap: 1rem;
 }
 
-.navigations>ul>ul {
-    padding-left: 1rem;
-    list-style: none;
-    visibility: hidden;
-    position: absolute;
-    opacity: 0;
-    pointer-events: none;
-}
-
-.navigations>ul>li {
-    font-size: 1.5rem;
-}
-
-.navigations>ul>ul>li {
-    font-size: 1rem;
-}
-
-.navigations ul li {
-    font-family: var(--font-bruno);
-    text-transform: uppercase;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    position: relative;
+.navbar>ul li {
     cursor: pointer;
-    translate: -24rem 0;
+    -webkit-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
-.navigations ul li::before {
-    content: "";
-    position: absolute;
-    bottom: -0.1em;
-    width: 100%;
-    height: 0.1em;
-    background-color: var(--foreground_color2);
-    scale: 0 1;
-    -webkit-transition: scale .3s ease-out;
-    -o-transition: scale .3s ease-out;
-    transition: scale .3s ease-out;
+.navbar>ul li:hover {
+    scale: 1.1;
 }
 
-.navigations ul li:hover::before {
-    -webkit-transform-origin: left;
-    -ms-transform-origin: left;
-    transform-origin: left;
-    scale: 1;
+.navbar>ul li:active {
+    rotate: 30deg;
 }
 
-.navigations ul li:active::before {
-    -webkit-transform-origin: right;
-    -ms-transform-origin: right;
-    transform-origin: right;
-    scale: 0 1;
-}
-
-.navigations>ul>li:nth-of-type(2) {
+.navbar>ul li a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: baseline;
-    -ms-flex-align: baseline;
-    align-items: baseline;
-    gap: 0.5rem;
 }
 
-.navigations>ul>li:nth-of-type(2) img {
-    -webkit-transition: all .3s;
-    -o-transition: all .3s;
-    transition: all .3s;
+.navbar>ul li img {
+    width: 1.25rem;
 }
 
-.navigations_apps_visible>ul>li:nth-of-type(2) img {
-    rotate: -180deg;
+.navbar>ul li:first-child img {
+    display: none;
+    width: 1.5rem;
 }
 
-.navigations ul li:nth-of-type(1) {
-    -webkit-transition: all .5s;
-    -o-transition: all .5s;
-    transition: all .5s;
-}
+@media screen and (max-width: 840px) {
+    .navbar>ul li:first-child img {
+        display: block;
+    }
 
-.navigations ul li:nth-of-type(2) {
-    -webkit-transition: all .5s .1s;
-    -o-transition: all .5s .1s;
-    transition: all .5s .1s;
-}
-
-.navigations_visible>ul>li {
-    translate: 0;
-}
-
-.navigations_apps_visible>ul>ul:nth-of-type(1) {
-    visibility: visible;
-    position: relative;
-    opacity: 1;
-    pointer-events: all;
-}
-
-
-.navigations_apps_visible>ul>ul:nth-of-type(1) li {
-    translate: 0;
+    .navbar>ul li:first-child span {
+        display: none;
+    }
 }
