--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,29 @@
 @font-face {
-  font-family: 'Bruno Ace';
-  src: url('./assets/fonts/BrunoAce-Regular.ttf');
+  font-family: 'Poppins';
+  src: local('Poppins'), url('./assets/fonts/Poppins-Regular.ttf');
 }
 
 @font-face {
-  font-family: 'Cantarell';
-  src: local('Cantarell'), url('./assets/fonts/Cantarell-Regular.ttf');
-}
-
-@font-face {
-  font-family: 'Cantarell';
-  src: local('Cantarell'), url('./assets/fonts/Cantarell-Bold.ttf');
+  font-family: 'Poppins';
+  src: local('Poppins'), url('./assets/fonts/Poppins-Bold.ttf');
   font-weight: bold;
 }
 
 @font-face {
-  font-family: 'Cantarell';
-  src: local('Cantarell'), url('./assets/fonts/Cantarell-Italic.ttf');
-  font-style: italic;
+  font-family: 'Goldman';
+  src: url('./assets/fonts/Goldman-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Goldman';
+  src: url('./assets/fonts/Goldman-Bold.ttf');
+  font-weight: bold;
 }
 
 :root {
-  --font-cantarell: 'Cantarell', var(--font-fallback);
-  --font-bruno: 'Bruno Ace', var(--font-fallback);
-  --font-fallback: 'Gill Sans', 'Gill Sans MT',
-    -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+  --font-poppins: 'Poppins', var(--font-system);
+  --font-goldman: 'Goldman', var(--font-system);
+  --font-system: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
 }
 
 :root {
@@ -115,12 +114,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--font-bruno);
+  font-family: var(--font-goldman);
 }
 
 body {
   margin: 0;
-  font-family: var(--font-cantarell);
+  font-family: var(--font-poppins);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -153,6 +152,6 @@ body::-webkit-scrollbar-thumb:active {
 }
 
 ::selection {
-  background-color: var(--primary_light_color2);
+  background-color: var(--on_primary_color);
   color: var(--foreground_color2);
 }
